[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"
author = "Kelvin César de Andrade"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.26", features = ["full"] }
tower = { version = "0.5", features = ["full"] }